# taglib-demos

./: CMakeLists.txt
.github/workflows/: build.yml
cmake/modules/: FindTagLib.cmake
demo_list/: CMakeLists.txt  demo_list.cpp
demo_map/: CMakeLists.txt
src/: demo-map.cpp
